test/runnable/llvm.nt
module llvm;

void main() {
    void nest((vec2i, int, (:a | :b)) arg) { }
    nest((vec2i(0), 0, :a));
}

alias vec2i = Vector(int, 2);
