test/fail_compilation/afl_1.nt
module afl_1;

int ack(int m,) {}
